...

    <!-- ========================================== -->
    <!-- STRINGS USED IN LOGIN AND SIGN-UP ACTIVITY -->
    <!-- ========================================== -->
    <string name="label_login_sign_up_divider">OR</string>
    <string name="hint_login_sign_up_email">Enter your email</string>
    <string name="error_login_sign_up_email_field_empty">Email can\'t be empty</string>
    <string name="error_login_sign_up_password_field_empty">Password can\'t be empty</string>
    <string name="error_login_sign_up_email_field_invalid">Not a valid email</string>
    <string name="error_login_sign_up_password_field_small_length">Password less than 6 digits</string>

    <!-- ================================ -->
    <!-- STRINGS USED IN SIGN-UP ACTIVITY -->
    <!-- ================================ -->
    <string name="hint_sign_up_name">Enter your full name</string>
    <string name="hint_sign_up_password">Choose your password</string>
    <string name="label_button_sign_up">Sign Up</string>
    <string name="label_text_button_sign_up_option_login">Login with Email</string>
    <string name="error_sign_up_name_field_empty">Name can\'t be empty</string>
    <string name="cd_image_sign_up_profile">Sign-Up Profile Image</string>

    <!-- ============================= -->
    <!-- STRINGS USED IN MAIN ACTIVITY -->
    <!-- ============================= -->
    <string name="title_main_bottom_nav_home">Home</string>
...
