...

    <FrameLayout
        android:id="@+id/container_main_nav_fragment"
        android:layout_width="@dimen/match_constraint_0dp"
        android:layout_height="@dimen/match_constraint_0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_main_bottom_nav_shadow"
...
