...
        app:layout_constraintStart_toEndOf="@+id/guideline_login_vertical_begin"
        app:layout_constraintTop_toBottomOf="@+id/text_input_login_password" />

    <View
        android:id="@+id/divider_login_sign_up"
        style="@style/DividerLoginSignUpOptions"
        app:layout_constraintBottom_toTopOf="@+id/text_button_login_option_sign_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_login_vertical_begin"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/text_login_sign_up_divider"
...
