...
            app:layout_constraintStart_toEndOf="@+id/image_home_item_post_creator_profile"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/HomePostCreatorProfileName"
            tools:text="@tools:sample/full_names" />

        <ImageView
            android:id="@+id/image_home_item_post_photo"
            style="@style/HomePostImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_home_item_post_creator_profile"
            tools:layout_constraintDimensionRatio="1.5"
            android:contentDescription="@string/cd_image_post_photo"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ImageButton
            android:id="@+id/imgbtn_home_item_toggle_post_like"
            android:layout_width="@dimen/imgbtn_home_item_toggle_post_like_size"
            android:layout_height="@dimen/imgbtn_home_item_toggle_post_like_size"
            android:layout_marginTop="@dimen/imgbtn_home_item_toggle_post_like_margin_top"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_imgbtn_home_item_toggle_post_like"
            android:src="@drawable/state_item_home_post_heart"
...
